--- a/quickstart/public/chat.css
+++ b/quickstart/public/chat.css
@@ -22,6 +22,7 @@ body {
 #chat-section {
     margin-left: 2rem;
     min-height: 30rem;
+    max-height: 30rem;
     width: calc(100% - 2rem);
     /*border: 1px solid orange;*/
     display: flex;
